--- a/.gitlad-ci.yml
+++ b/.gitlad-ci.yml
@@ -2,5 +2,6 @@ run_tests:
   image: python:3.9-slim-buster
   before_script: 
     - apt-get update && apt-get install make
+    - apt-get install herokuish
   script:
     - make test
