--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build_image:
   services:
     - docker:20.10.16-dind
   variables:
-    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_TLS_CERTDIR: "/certs" #testing
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
   script:
