Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,3 +6,7 @@ run_tests:
   script:
     - make test
 
+build_image:
+  script:
+    -docker build -t bakirova/demo:python-app-1.0 .
+    -docker push bakirova/demo:python-app-1.0
