--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ variables:
 stages:
   - test
   - build
+  - deploy
 
 run_tests:
   stage: test
@@ -26,3 +27,12 @@ build_image:
   script:
     - docker build -t $IMAGE_NAME:$IMAGE_TAG .
     - docker push $IMAGE_NAME:$IMAGE_TAG
+
+deploy:
+  stage: deploy
+  script:
+    -  ssh -o StrictHostKeyChecking=no -i $SSH_KEY_DIGITAL_OCEAN root@207.154.194.201 "
+        docker login -u $REGISTRY_USER -p $REGISTRY_PASS && 
+        docker ps -aq | xargs docker stop | xargs docker remove &&
+        docker run -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG
+        "
