--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,6 @@ deploy:
   script:
     -  ssh -o StrictHostKeyChecking=no -i $SSH_KEY_DIGITAL_OCEAN root@207.154.194.201 "
         docker login -u $REGISTRY_USER -p $REGISTRY_PASS && 
-        docker ps -aq | xargs docker stop | xargs docker remove &&
-        docker run -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG
-        "
+        docker ps -aq | xargs docker stop | xargs docker rm &&
+        docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
+
