dcoker push to docker hubb

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,11 @@ run_tests:
     - make test
 
 build_image:
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  variables:
+    DOCKER_TLS_CERTDIRS: "/certs"
   before_script:
     - docker login -u $registry_user -P $registry_pass
   script:
