--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 run_tests:
   stage: test
-  image: python:3.9-slim-buster
+  image: python
   before_script:
     - apt-get update && apt-get install make
   script:
