--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
   IMAGE_NAME: noam1023/cicd-demo-app
   IMAGE_TAG: python-app-1.0
+  DO_PUB_IP: 161.35.93.37
 
 stages:
   - test
@@ -35,7 +36,7 @@ deploy:
   before_script:
     - chmod 400 $SSH_KEY
   script:
-    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@161.35.223.117 "
+    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@$DO_PUB_IP "
         docker login -u $REGISTRY_USER -p $REGISTRY_PASS &&
         docker ps -aq | xargs docker stop | xargs docker rm &&
         docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
