--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build_image:
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
   before_script:
-    - echo $Docker_hub_pwd | docker login -u $Dockerhub_User --Chestdrawers@7-stdin
+    - docker login -u $Dockerhub_User -p $Docker_hub_pwd
   script:
     - docker build -t $IMAGE_NAME:$IMAGE_TAG .
     - docker push $IMAGE_NAME:$IMAGE_TAG
