--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ deploy:
   stage: deploy
 
   script:
-    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@172.31.92.147 "
+    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@172.31.92.147
         docker login -u $Dockerhub_User -p $Docker_hub_pwd &&
         docker ps -aq | xargs docker stop | xargs docker rm &&
         docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
