--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ build_image:
 
 deploy:
   stage: deploy
+  before_script:
+    - chmod 400 $PRIVATE_KEY
 
   script:
     - ssh -o StrictHostKeyChecking=no -i $PRIVATE_KEY ec2-user@172.31.92.147 "
